# phlx-contracts

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VERSIONING.md
.github/workflows/: publish.yml  validate.yml
go/: go.mod  go.sum
go/events/: events.go  fire_event_schema.go  topics.go
go/models/: alert.go  asset.go  asset_event_group.go  audit_log.go  common.go  composition.go  fire_event.go  fire_risk.go  location.go  mission.go  mission_chat.go  tactical_command.go  team.go  user.go
openapi/: auth-service.yaml  communication-hub-service.yaml  dispatch-asset-service.yaml  location-navigation-service.yaml  mission-command-service.yaml  video-processing-service.yaml
python/: README.md  pyproject.toml  setup.py
python/src/phlx_contracts/: __init__.py
python/src/phlx_contracts/events/: __init__.py
python/src/phlx_contracts/models/: __init__.py  alert.py  asset.py  asset_event_group.py  audit_log.py  common.py  fire_event.py  fire_risk.py  location.py  mission.py  mission_chat.py  tactical_command.py  team.py  user.py
typescript/: README.md  package-lock.json  package.json
typescript/src/: index.ts
typescript/src/events/: events.ts  fireEvents.ts  index.ts  topics.ts
typescript/src/models/: Alert.ts  Asset.ts  AssetEventGroup.ts  AuditLog.ts  Composition.ts  FireEvent.ts  FireRisk.ts  Location.ts  Mission.ts  MissionChat.ts  TacticalCommand.ts  Team.ts  User.ts  common.ts  index.ts
